# sphexp

./: CMakeLists.txt  README.md
mod/: module_crust.mod  module_function.mod  module_ice5g.mod  module_maps.mod  module_sphexp.mod  module_util.mod  nrtype.mod  nrutil.mod  ran_state.mod
src/: Makefile  gasdev.f90  gll_library.f90  lagrange_poly.f90  module_crust.f90  module_function.f90  module_ice5g.f90  module_maps.f90  module_sphexp.f90  module_util.f90  nrtype.f90  nrutil.f90  ran1.f90  rotmx2.f  sphexp_backus_gilbert.f90  sphexp_chi_comp.f90  sphexp_data.f90  sphexp_data_id.f90  sphexp_data_idc.f90  sphexp_data_idlm.f90  sphexp_data_power_spectrum_recovery.f90  sphexp_global_grid.f90  sphexp_global_grid_2.f90  sphexp_inv.f90  sphexp_inv_av.f90  sphexp_inv_intermediate.f90  sphexp_inv_short.f90
